--- a/index.css
+++ b/index.css
@@ -8,14 +8,21 @@ body {
     font: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
     overflow-y: hidden;
 }
-
+h1, h2 {
+    margin: 20px 0 10px 0;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #00000026;
+}
+a {
+    color: unset;
+}
 :root {
     --input-item-background-color: #00000012;
     --border-color: #00000021;
     --sc-orange: #f50;
     --bright-green: #00e308;
     --unactive: #00000026;
-    --mainPageHeightSub: 364px;
+    --mainPageHeightSub: 315px;
 }
 
 .root {
@@ -159,11 +166,11 @@ body {
     padding: 5px 0px 5px 0px;
 }
 .root .mainPage .layer.select {
-    box-shadow: inset 0px 0px 6px #0000005c;
+    box-shadow: inset 0px 0px 15px #00000036;
 }
 .root .mainPage .layers {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 40px);
     overflow-y: scroll;
 }
 
@@ -421,4 +428,54 @@ body {
 }
 .root .mainPage .layer .input-item.font-select .label {
     cursor: unset;
+}
+
+.root .mainPage .layer.shape-layer .linesBox {
+    min-height: 20px;
+    padding: 5px;
+    border-radius: 12px;
+    margin: 2px;
+    border: 1px solid var(--border-color);
+    font-size: 14px;
+}
+.root .mainPage .layer.shape-layer .linesBox .line-item {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid var(--border-color);
+    padding: 3px;
+}
+.root .mainPage .layer.shape-layer .linesBox .line-item:last-child {
+    border-bottom: unset;
+}
+.root .mainPage .layer.shape-layer .linesBox .linear .curveDot {
+    display: none;
+}
+.root .mainPage.exportPage canvas  {
+    max-width: calc(100% - 10px);
+    display: block;
+    border: solid black;
+    margin-bottom: 20px;
+}
+.root .mainPage.exportPage .fileDownload {
+    display: inline-flex;
+    align-items: center;
+    padding: 5px;
+    justify-content: space-between;
+    border: 1px solid #0000004d;
+    cursor: pointer;
+    border-radius: 5px;
+}
+.root .aboutPage .profile {
+    border-radius: 100%;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+.root .aboutPage .link {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+.root .aboutPage .link img {
+    width: 20px;
+    margin-right: 5px;
 }
