클립보드 붙여넣기 추가

--- a/index.css
+++ b/index.css
@@ -140,6 +140,7 @@ a {
     cursor: pointer;
     height: 38px;
     border-bottom: unset;
+    user-select: none;
 }
 
 .root .header .header-item.select {
